# skin-lesion-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: app.py
notebooks/: 01_eda.ipynb  02_segmentation.ipynb  03_classification.ipynb  04_evaluation.ipynb
src/data/: __init__.py  dataset.py  transforms.py
src/models/: __init__.py  classification.py  segmentation.py
src/utils/: __init__.py  metrics.py
tests/: test_classification.py  test_dataset.py  test_imports.py  test_metrics.py  test_segmentation.py
