[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skin-lesion-analysis"
version = "0.1.0"
description = "Pipeline de segmentación y clasificación de lesiones cutáneas con Deep Learning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "segmentation-models-pytorch>=0.3.0",
    "timm>=0.9.0",
    "albumentations>=1.3.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "python-dotenv>=1.0.0",
    "huggingface_hub>=0.23.0",
    "gradio>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
pythonpath = ["."]